public class main {
    public static void main(String[] args) {
        new Game(2).jugar();
    }
}
